css spacing fixes

--- a/src/components/Filtering/ByGenre/ByGenre.module.scss
+++ b/src/components/Filtering/ByGenre/ByGenre.module.scss
@@ -17,7 +17,7 @@
   flex-wrap: wrap;
   gap: 0.2rem;
   justify-content: flex-start;
-  margin: 0;
+  margin: 0 0 1.5rem;
   padding: 0;
 
   list-style-type: none;
