--- a/src/components/MovieGrid/MoviesGrid.module.scss
+++ b/src/components/MovieGrid/MoviesGrid.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 1rem;
+  margin-bottom: 1.5rem;
 
   @media (min-width: 992px) {
     grid-template-columns: repeat(2, 1fr);
